--- a/kprobe/Cargo.toml
+++ b/kprobe/Cargo.toml
@@ -9,3 +9,7 @@ log = "0.4.21"
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 yaxpeax-x86 = { version = "2", default-features = false, features = ["fmt"] }
 yaxpeax-arch = { version = "0", default-features = false }
+
+
+[dev-dependencies]
+spin = "0.10"
