feat: Improve the tracepoint
fix kprobe bug for la64 arch

Signed-off-by: Godones <chenlinfeng25@outlook.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 
-members = ["bpf-basic", "kprobe", "tracepoint", "rbpf", "polyhal"]
-
+members = ["bpf-basic", "kprobe", "tracepoint", "rbpf", "simple-ebpf"]
+exclude = ["polyhal"]
 
 resolver = "2"
