--- a/kprobe/Cargo.toml
+++ b/kprobe/Cargo.toml
@@ -2,13 +2,14 @@
 name = "kprobe"
 version = "0.1.0"
 edition = "2021"
+authors = ["chen linfeng"]
 
 [dependencies]
 log = "0.4.21"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 yaxpeax-x86 = { version = "2", default-features = false, features = ["fmt"] }
-yaxpeax-arch = { version = "0", default-features = false }
+yaxpeax-arch = { version = "0.3", default-features = false }
 
 
 [dev-dependencies]
