--- a/tracepoint/Cargo.toml
+++ b/tracepoint/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 
 [dependencies]
 static-keys = "0.7.0"
-paste = "=1.0.14"
-
+paste = "1.0"
+log = "0.4"
+lock_api = "0.4"
 
 [dev-dependencies]
-spin = "0.9"
+spin = "0.10"
+env_logger = "0.11"
