add more basic ebpf structure
Signed-off-by: Godones <chenlinfeng25@outlook.com>

--- a/bpf-basic/Cargo.toml
+++ b/bpf-basic/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 printf-compat = { version = "0.1.1", default-features = false }
 bitflags = "2.9"
 lru = "0.13"
-
 log = "0.4"
+rbpf = { path = "../rbpf", default-features = false }
