feat: add more structures
add lock for kprobe

Signed-off-by: Godones <chenlinfeng25@outlook.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,13 @@
 [workspace]
 
-members = ["bpf-basic", "kprobe", "tracepoint", "rbpf", "simple-ebpf"]
+members = [
+    "bpf-basic",
+    "kprobe",
+    "tracepoint",
+    "rbpf",
+    "simple-ebpf",
+    # "polyhal/example",
+]
 exclude = ["polyhal"]
 
 resolver = "2"
