--- a/kprobe/Cargo.toml
+++ b/kprobe/Cargo.toml
@@ -6,6 +6,8 @@ authors = ["chen linfeng"]
 
 [dependencies]
 log = "0.4.21"
+lock_api = "0.4"
+
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 yaxpeax-x86 = { version = "2", default-features = false, features = ["fmt"] }
