--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
 	"rust-analyzer.check.allTargets": false,
 	"rust-analyzer.check.targets": [
 		// "riscv64gc-unknown-none-elf",
-		"x86_64-unknown-none",
+		// "x86_64-unknown-none",
 		// "loongarch64-unknown-none",
 	],
 	"rust-analyzer.check.features": "all",
