feat: Add tools for supporting ebpf in unikernels
[bpf-basic] Fixed the issue that `bpf_trace_printk` parameters need to be
read from the stack.
[unikernel] Implement commands for getting eBPF data from unikernels,
using the network for transmission.

Signed-off-by: Godones <chenlinfeng25@outlook.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,15 @@ members = [
     "kprobe",
     "tracepoint",
     "rbpf",
-    "simple-ebpf",
     "ksym",
+    "unikernel/*",
     # "polyhal/example",
 ]
 exclude = ["polyhal"]
 
 resolver = "2"
+
+
+[workspace.dependencies]
+aya-obj = { path = "../aya/aya-obj" }
+aya = { path = "../aya/aya", default-features = false }
