--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
 	],
 	"rust-analyzer.check.features": "all",
 	"rust-analyzer.check.extraArgs": [],
+	"makefile.configureOnOpen": true,
 	// "rust-analyzer.cargo.target": "loongarch64-unknown-none"
 }
