--- a/bpf-basic/Cargo.toml
+++ b/bpf-basic/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 [dependencies]
 printf-compat = { version = "0.1.1", default-features = false }
 bitflags = "2.9"
-lru = "0.13"
+lru = { version = "0.14", features = ["nightly"] }
 log = "0.4"
-rbpf = { path = "../rbpf", default-features = false }
+rbpf = { git = "https://github.com/qmonnet/rbpf", default-features = false }
 int-enum = "1.2"
-
