--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,8 @@
 {
-	"rust-analyzer.check.allTargets": false,
-	"rust-analyzer.check.targets": [
-		// "riscv64gc-unknown-none-elf",
-		// "x86_64-unknown-none",
-		// "loongarch64-unknown-none",
-	],
-	"rust-analyzer.check.features": "all",
-	"rust-analyzer.check.extraArgs": [],
-	"makefile.configureOnOpen": true,
-	// "rust-analyzer.cargo.target": "loongarch64-unknown-none"
+	// "rust-analyzer.check.allTargets": true,
+	"rust-analyzer.checkOnSave": true,
+	"makefile.configureOnOpen": false,
+	// "rust-analyzer.cargo.target": "riscv64gc-unknown-none-elf",
+	// "rust-analyzer.cargo.target": "loongarch64-unknown-none",
+	"rust-analyzer.cargo.target": "x86_64-unknown-none"
 }
