--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
 	"makefile.configureOnOpen": false,
 	// "rust-analyzer.cargo.target": "riscv64gc-unknown-none-elf",
 	// "rust-analyzer.cargo.target": "loongarch64-unknown-none",
-	"rust-analyzer.cargo.target": "x86_64-unknown-none"
+	// "rust-analyzer.cargo.target": "x86_64-unknown-none"
 }
