--- a/tracepoint/Cargo.toml
+++ b/tracepoint/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "tracepoint"
-version = "0.1.0"
-edition = "2021"
+authors.workspace = true
+version.workspace = true
+edition = "2024"
 
 [dependencies]
-static-keys = "0.7"
+static-keys = "0.8"
 paste = "1.0"
 log = "0.4"
 lock_api = "0.4"
@@ -12,3 +13,5 @@ lock_api = "0.4"
 [dev-dependencies]
 spin = "0.10"
 env_logger = "0.11"
+libc = { version = "0.2", default-features = false }
+clear-cache = "0.1"
