--- a/ksym/Cargo.toml
+++ b/ksym/Cargo.toml
@@ -7,7 +7,7 @@ authors.workspace = true
 
 [dependencies]
 rustc-demangle = { version = "0.1", optional = true }
-lazyinit = { workspace = true }
+lazyinit = "0.2"
 
 [features]
 demangle = ["dep:rustc-demangle"]
