--- a/tracepoint/Cargo.toml
+++ b/tracepoint/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "tracepoint"
-authors.workspace = true
 version.workspace = true
-edition = "2024"
+edition.workspace = true
+authors.workspace = true
 
 [dependencies]
 static-keys = "0.8"
