--- a/tracepoint/Cargo.toml
+++ b/tracepoint/Cargo.toml
@@ -3,6 +3,10 @@ name = "tracepoint"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
+license-file.workspace = true
+homepage.workspace = true
+repository.workspace = true
+description = "A Rust crate for implementing tracepoints in operating systems."
 
 [dependencies]
 static-keys = "0.8"
