--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2024"
 authors = ["Linfeng Chen <chenlinfeng25@outlook.com>"]
 keywords = ["kprobe", "tracepoint", "kernel"]
 categories = ["os", "no-std"]
+license-file = "LICENSE"
+homepage = "https://github.com/Godones/ext_ebpf"
+repository = "https://github.com/Godones/ext_ebpf"
 
 [workspace.dependencies]
 aya-obj = { git = "https://github.com/Godones/aya.git", branch = "dev" }
