--- a/ksym/Cargo.toml
+++ b/ksym/Cargo.toml
@@ -3,7 +3,10 @@ name = "ksym"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
-
+license-file.workspace = true
+homepage.workspace = true
+repository.workspace = true
+description = "A Rust crate for generating kernel symbol tables (ksyms) from kernel binaries."
 
 [dependencies]
 rustc-demangle = { version = "0.1", optional = true }
