--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,12 @@
 [workspace]
-members = ["bpf-basic", "kprobe", "ktracepoint", "ksym", "unikernel/*"]
+members = [
+    "bpf-basic",
+    "kprobe",
+    "ktracepoint",
+    "ksym",
+    "unikernel/*",
+    "ksym-bin",
+]
 resolver = "2"
 
 [workspace.package]
