feat: add a new ksym implementation
Signed-off-by: Godones <chenlinfeng25@outlook.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,5 @@
 [workspace]
-members = [
-    "bpf-basic",
-    "kprobe",
-    "ktracepoint",
-    "ksym",
-    "unikernel/*",
-    "ksym-bin",
-]
+members = ["bpf-basic", "kprobe", "ktracepoint", "ksym", "unikernel/*"]
 resolver = "2"
 
 [workspace.package]
